fixed alignment problem in about section and define it's background color in less file

--- a/less/freelancer.less
+++ b/less/freelancer.less
@@ -206,7 +206,7 @@ section {
 }
 
 section.success {
-	background: @theme-success;
+	background: @theme-primary;
 	color: white;
 }
 
